--- a/Abgabe2/gradle/wrapper/gradle-wrapper.properties
+++ b/Abgabe2/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,5 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
+#Wed Jun 03 11:12:00 CEST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
